Revision history for ParaSeq

{{$NEXT}}
    - Added ".list" coercer
    - Updated status of ".keys" and added tests
    - Added optimized ".kv" and tests
    - Added optimized ".pairs" and tests
    - Added optimized ".antipairs" and tests

0.0.5  2024-05-27T17:23:14+02:00
    - Added a *lot* of methods, at least as stubs for now
    - Added documentation about all methods supported, and their status
    - Added optimized ".unique" and tests

0.0.4  2024-05-25T19:49:54+02:00
    - Refined BufferIterator logic with dedicated "skip-at-least"
    - Made "racify" synonym for "hyperize": there was no point in
      keeping separate code paths: this also meant removing the
      "racing" attributes and methods
    - Fixed an issue with ParaSeq.skip-at-least when it was possible
      to skip the entire current buffer, and there was no next buffer
    - Made ParaSeq.push-all a multi again, optimized for the case when
      pushing to an IterationBuffer
    - Added tests for BufferIterator and ParaIterator classes

0.0.3  2024-05-24T22:07:44+02:00
    - Added bespoke support for .reduce, .sum and .join

0.0.2  2024-05-24T19:15:21+02:00
    - Added proper batch adjustment logic
    - Added :auto named arg, switch off batch adjustment with :!auto
    - Added :stop-after(N) to limit number of values delivered
    - Added ParaSeq introspection methods: .auto, .batch-sizes,
      .default-batch, .default-degree, .racing, .stats, .stop-after,
      .stopped, .threads
    - Added ParaStats .ordinal and .threadid introspection methods
    - Added a lot of documentation

0.0.1  2024-05-20T16:15:32+02:00
    - Initial version